Fixed album covers overlapping with footer

--- a/client/stylesheets/gallery.styl
+++ b/client/stylesheets/gallery.styl
@@ -23,6 +23,10 @@
       .title
         display block
         text-decoration none
+  &:after
+    content ""
+    display table
+    clear both
 
 .pictures
   margin-top 20px
